// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerdaccioMiddlewarePlugin date filtering dateThreshold combined with minAgeDays filters by dateThreshold when it's earlier than minAgeDays 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "1.5.0",
  },
  "name": "@babel/test",
  "time": Object {
    "1.0.0": "2020-01-01T00:00:00.000Z",
    "1.5.0": "2022-01-01T00:00:00.000Z",
    "created": "2020-01-01T00:00:00.000Z",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "1.5.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin date filtering dateThreshold combined with minAgeDays filters by dateThreshold when it's earlier than minAgeDays 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.2.0",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2015-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin date filtering dateThreshold combined with minAgeDays filters by minAgeDays when it's earlier than dateThreshold 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "1.5.0",
  },
  "name": "@babel/test",
  "time": Object {
    "1.0.0": "2020-01-01T00:00:00.000Z",
    "1.5.0": "2022-01-01T00:00:00.000Z",
    "created": "2020-01-01T00:00:00.000Z",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "1.5.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin date filtering dateThreshold combined with minAgeDays filters by minAgeDays when it's earlier than dateThreshold 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.2.0",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2015-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin date filtering filters by dateThreshold 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "1.5.0",
  },
  "name": "@babel/test",
  "time": Object {
    "1.0.0": "2020-01-01T00:00:00.000Z",
    "1.5.0": "2022-01-01T00:00:00.000Z",
    "created": "2020-01-01T00:00:00.000Z",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "1.5.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin date filtering filters by dateThreshold 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.2.0",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2015-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin date filtering filters by minAgeDays 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "1.5.0",
  },
  "name": "@babel/test",
  "time": Object {
    "1.0.0": "2020-01-01T00:00:00.000Z",
    "1.5.0": "2022-01-01T00:00:00.000Z",
    "created": "2020-01-01T00:00:00.000Z",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "1.5.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin date filtering filters by minAgeDays 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.2.0",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2015-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by multiple versions 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "1.5.0",
  },
  "name": "@babel/test",
  "readme": "
Some versions(2) of package are blocked by rules: >2.0.0,<1.3.0",
  "time": Object {
    "1.5.0": "2022-01-01T00:00:00.000Z",
    "created": "2022-01-01T00:00:00.000Z",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.5.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by multiple versions 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.6.3",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "2.6.3": "2025-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2025-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.6.3": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by package 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {},
  "name": "@babel/test",
  "readme": "All package versions blocked by rule",
  "time": Object {},
  "versions": Object {},
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by package 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.6.3",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "2.6.3": "2025-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2025-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.6.3": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by scope 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {},
  "name": "@babel/test",
  "readme": "All packages in scope @babel blocked by rule",
  "time": Object {},
  "versions": Object {},
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by scope 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.6.3",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "2.6.3": "2025-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2025-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.6.3": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by versions 1`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "1.0.0",
  },
  "name": "@babel/test",
  "readme": "
Some versions(2) of package are blocked by rules: >1.0.0",
  "time": Object {
    "1.0.0": "2020-01-01T00:00:00.000Z",
    "created": "2020-01-01T00:00:00.000Z",
    "modified": "2020-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;

exports[`VerdaccioMiddlewarePlugin package and version filtering filters by versions 2`] = `
Object {
  "_attachments": Object {},
  "_distfiles": Object {},
  "_rev": "",
  "_uplinks": Object {},
  "dist-tags": Object {
    "latest": "2.6.3",
  },
  "name": "@types/node",
  "time": Object {
    "1.0.0": "2010-01-01T00:00:00.000Z",
    "2.2.0": "2015-01-01T00:00:00.000Z",
    "2.6.3": "2025-01-01T00:00:00.000Z",
    "created": "2010-01-01T00:00:00.000Z",
    "modified": "2025-01-01T00:00:00.000Z",
  },
  "versions": Object {
    "1.0.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.2.0": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
    "2.6.3": Object {
      "_id": "",
      "main": "",
      "name": "",
      "readme": "",
      "version": "",
    },
  },
}
`;
